--- a/.env.txt
+++ b/.env.txt
@@ -1,6 +1,7 @@
-UPLOAD_PATH='/home/rafael/upload/'
-STORAGE_PATH='/home/rafael/originals/'
-FAILED_PATH='/home/rafael/originals/failed/'
-WEB_PATH='/home/rafael/photos-homecamps/'
+UPLOAD_PATH='/home/rafael/homecamp-fotos/upload/'
+STORAGE_PATH='/home/rafael/homecamp-fotos/originals/'
+FAILED_PATH='/home/rafael/homecamp-fotos/originals/failed/'
+WEB_PATH='/home/rafael/homecamp-fotos/web-photos/'
 SIZE=800
 QUALITY=85
+INTERVAL=15
